在第2部分，添加URL链接

--- a/第2部分 - 概念和数据流.md
+++ b/第2部分 - 概念和数据流.md
@@ -8,7 +8,7 @@ date: '2022-01-20'
 > - 使用Redux的关键术语和概念
 > - 数据如何流经Redux应用程序
 
-在[第1部分: Redux概念]()中,我们讨论了Redux是什么,为什么要使用它,并列出了通常与Redux 核心一起使用的其他Redux库.我们还看到了一个Redux应用程序的小例子,以及构成该应用程序的代码.最后,我简要介绍了Redux中使用的一些术语和概念.
+在[第1部分: Redux概念](https://github.com/hatch1994/redux-tutorial/blob/main/%E7%AC%AC1%E9%83%A8%E5%88%86%20-%20redux%20%E6%A6%82%E8%BF%B0.md)中,我们讨论了Redux是什么,为什么要使用它,并列出了通常与Redux 核心一起使用的其他Redux库.我们还看到了一个Redux应用程序的小例子,以及构成该应用程序的代码.最后,我简要介绍了Redux中使用的一些术语和概念.
 
 在本节中,我们将更详细地研究这些术语和概念,并进一步讨论数据如何在Redux应用程序中流动.
 
